--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,26 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+
+  .vox--vars {
+    --headline-font-family: 'Courier';
+    --background-color-primary: '#fff200';
+  }
+  
+  .thecut--vars {
+    --headline-font-family: 'Georgia';
+    --background-color-primary: '#e5e7eb';
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer components {
+  .vox .lede-headline {
+    @apply font-serif text-xl bg-yellow-300;
+  }
 
-* {
-  box-sizing: border-box;
+  .thecut .lede-headline {
+    @apply font-sans text-3xl bg-gray-200;
+  }
 }
